# fubuki-browser-alpha

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml
.github/workflows/: ci.yml  pr-ci.yml
crates/frost-core/: Cargo.toml
crates/frost-core/src/: bookmark_service.rs  download_service.rs  external_router.rs  history_service.rs  lib.rs  settings_service.rs  tab_service.rs  window_service.rs
crates/frost-engine-api/: Cargo.toml
crates/frost-engine-api/src/: lib.rs
crates/frost-ffi/: Cargo.toml
crates/frost-ffi/src/: lib.rs
crates/frost-protocol/: Cargo.toml
crates/frost-protocol/src/: event.rs  external.rs  host.rs  lib.rs  request.rs  response.rs  state.rs
crates/frost-store/: Cargo.toml
crates/frost-store/src/: lib.rs
crates/fubuki-mcp-server/: Cargo.toml
crates/fubuki-mcp-server/src/: main.rs
docs/: architecture.md  audit-baseline-2026-07-13.md  automation-api.md  bridge-api.md  bridge.md  commands.md  events.md  frost-engine-feasibility.md  frost-engine-plan.md  internal-pages.md  known-limitations.md  mcp.md
icons/: .gitignore
native/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  cppcheck-suppressions.xml  verify_bundle.cmake
native/resources/: Info.plist.in  fubuki.icns  helper-Info.plist.in
native/src/: frost_ffi.h  main.cc
native/src/app/: FubukiApp.cc  FubukiApp.h
native/src/automation/: AutomationController.cc  AutomationController.h  AutomationIpcServer.cc  AutomationIpcServer.h  BrowserAutomation.cc  BrowserAutomation.h  PageAutomation.h  PageAutomation.mm
native/src/bridge/: BridgeSchema.cc  BridgeSchema.h  FrostBridge.cc  FrostBridge.h  NativeBridge.cc  NativeBridge.h
native/src/browser/: BrowserAppController.cc  BrowserAppController.h  BrowserDataStore.cc  BrowserDataStore.h  BrowserWindow.h  BrowserWindow.mm  FrostStore.cc  FrostStore.h  HostCommandRouting.h  SidebarLayoutState.h  Tab.cc  Tab.h  TabContextMenuState.h  TabManager.cc  TabManager.h
native/src/cef/: FubukiCefApp.cc  FubukiCefApp.h  FubukiClient.cc  FubukiClient.h  FubukiRenderApp.cc  FubukiRenderApp.h  FubukiSchemeHandler.cc  FubukiSchemeHandler.h
native/src/commands/: CommandRegistry.cc  CommandRegistry.h
native/src/events/: EventBus.cc  EventBus.h
native/src/platform/mac/: AppDelegate.mm  MacMenu.mm  ProcessHelper.cc
native/src/utils/: DownloadUtils.cc  DownloadUtils.h  JsonUtils.h  UrlUtils.cc  UrlUtils.h
native/tests/: BridgeSchemaTest.cc  CMakeLists.txt  DownloadUtilsTest.cc  HostCommandRoutingTest.cc  JsonUtilsTest.cc  SidebarLayoutStateTest.cc  TabContextMenuStateTest.cc  UrlUtilsTest.cc
scripts/: bootstrap.sh  build.sh  build_native.sh  build_rust.sh  build_ui.sh  clean.sh  configure_native.sh  fetch_cef.sh  generate-icons.sh  run.sh
ui/: .gitignore  index.html  internal.html  oxlint.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.tsx  internal.tsx  main.tsx  sidebarSizing.ts  sidebarWidthSync.ts  tabEventPatch.ts  tabOrdering.ts  tabShortcuts.ts
ui/src/__tests__/: bridge.test.ts  bridgeFailure.test.ts  bridgeResponse.test.ts  bridgeRuntime.test.ts  bridgeTypes.test.ts  browserStore.test.ts  browserStoreRace.test.ts  browserStoreRuntime.test.ts  commandPalette.test.ts  commands.test.ts  i18n.test.ts  internalActions.test.ts  internalPages.test.ts  navigation.test.ts  sidebarResize.test.ts  sidebarSizing.test.ts  sidebarWidthSync.test.ts  tabEventPatch.test.ts  tabOrdering.test.ts  tabShortcuts.test.ts  topBar.test.ts
ui/src/assets/: logo.ts
ui/src/bridge/: fubuki.ts  response.ts  runtime.ts  validation.ts
ui/src/components/: AppShell.tsx  BookmarkModal.tsx  BookmarkPopover.tsx  BrowserPanels.tsx  BrowserShell.tsx  DownloadsModal.tsx  DownloadsPopover.tsx  HistoryPopover.tsx  Omnibox.tsx  PanelLayer.tsx  Sidebar.tsx  SidebarActions.tsx  StatusBar.tsx  TabItem.tsx  TabStrip.tsx  Toolbar.tsx  TopBar.tsx  VerticalTabList.tsx  WebViewArea.tsx
ui/src/components/commandPalette/: CommandPalette.tsx  commands.ts
ui/src/components/settings/: AppearanceSettings.tsx  GeneralSettings.tsx  McpSettings.tsx  SearchSettings.tsx  SettingsDetail.tsx  SettingsList.tsx  SettingsSidebar.tsx  SidebarSettings.tsx  ZoomSettings.tsx  settings-ui.tsx  settingsActions.ts  settingsSections.ts
ui/src/components/settings/settings-panels/: AboutPanel.tsx  AppearancePanel.tsx  GeneralPanel.tsx  McpPanel.tsx  SearchPanel.tsx  ZoomPanel.tsx
ui/src/hooks/: useSidebarResize.ts
ui/src/i18n/: dictionaries.ts  index.ts
ui/src/internalPages/: README.md  SettingsPage.tsx
ui/src/pages/: InternalPages.tsx
ui/src/pages/internal/: BookmarksPage.tsx  DebugPage.tsx  DownloadsPage.tsx  HistoryPage.tsx  NewTabPage.tsx  SettingsPage.tsx  actions.ts  components.tsx  data.ts  settingsSearch.ts
ui/src/stores/: browserStore.ts  tabUtils.ts
ui/src/styles/: app.css  command-palette.css  internal-pages.css  settings.css  shell.css  sidebar.css  tabs.css  tokens.css  topbar.css
ui/src/utils/: navigation.ts
