[workspace]
members = [
  "crates/frost-core",
  "crates/frost-engine-api",
  "crates/frost-protocol",
  "crates/frost-store",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/fubuki-browser/fubuki-browser-alpha"

[workspace.dependencies]
crossbeam-channel = "0.5"
frost-engine-api = { path = "crates/frost-engine-api" }
frost-protocol = { path = "crates/frost-protocol" }
frost-store = { path = "crates/frost-store" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
