[package]
name = "frost-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam-channel.workspace = true
frost-engine-api.workspace = true
frost-protocol.workspace = true
frost-store.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
